--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "clean-deep": "^3.4.0",
+    "qs": "^6.10.1"
   }
 }
